<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:background="@color/white">
    <DatePicker
            android:id="@+id/dialog_time_datepick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_input_time"
            android:padding="10dp"/>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:padding="10dp">
        <EditText
                android:id="@+id/dialog_time_et_hour"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" : "
                android:textSize="20dp"
                android:textStyle="bold"/>
        <EditText
                android:id="@+id/dialog_time_et_minute"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"/>

        
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
        <Button
                android:id="@+id/dialog_time_btleft"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:text="@string/dialog_beizhu_btleft"
                android:background="@drawable/dialog_beizhu_bg"
                android:textStyle="bold"
                android:layout_marginRight="5dp"/>

        <Button
                android:id="@+id/dialog_time_btright"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dialog_beizhu_btright"
                android:background="@drawable/dialog_beizhu_bg"
                android:textStyle="bold"
                android:layout_marginRight="5dp"/>
    </LinearLayout>


</LinearLayout>